objects/ACC_Obj1__c.object
<CustomObject>
    <description>Test</description>
    <fields>
        <fullName>Pick1__c</fullName>
        <label>Pick1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pick2__c</fullName>
        <label>Pick2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pick3__c</fullName>
        <label>Pick3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test1__c</fullName>
        <label>Test1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Test2__c</fullName>
        <label>Test2</label>
        <type>Email</type>
    </fields>
    <label>ACC-Obj1</label>
    <nameField>
        <label>ACC-Obj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ACCObj1s</pluralLabel>
    <recordTypes>
        <fullName>RT_1</fullName>
        <active>true</active>
        <label>RT#1</label>
    </recordTypes>
    <recordTypes>
        <fullName>RT_2</fullName>
        <active>true</active>
        <label>RT#2</label>
    </recordTypes>
    <recordTypes>
        <fullName>RT_3</fullName>
        <active>true</active>
        <label>RT#3</label>
    </recordTypes>
    <recordTypes>
        <fullName>RT_4</fullName>
        <active>true</active>
        <label>RT#4</label>
    </recordTypes>
    <recordTypes>
        <fullName>RT_5</fullName>
        <active>true</active>
        <label>RT#5</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>